cif/org.eclipse.escet.cif.tests/tests/cif2plc/constants_keep.cif.s7-1500.err
ERROR: PLC code generation failed for CIF file "cif2plc/constants_keep.cif".
CAUSE: CIF PLC code generator failed due to unsatisfied preconditions:
 - A list type is used:
   - In the top-level scope of the specification:
     - initial a + b + c + d + cl[0] + x = 10.0;
                               ^
     - invariant a + b + c + d + cl[0] + x = 10.0;
                                 ^
   - In automaton "aut":
     - invariant a + b + c + d + cl[0] + x = 10.0;
                                 ^
   - In constant "cl":
     - const list[3] real cl = [1.0, 1.0, 2.0];
             ^                 ^
